finished with styling issues on tablet/mobile for single gallery page

--- a/css/child-theme.css
+++ b/css/child-theme.css
@@ -11048,12 +11048,14 @@ section#past-gallery {
     letter-spacing: 1.5px;
     color: #D41C53; }
 
-.single-gallery-page .gallery-contents h1 {
-  text-align: justify !important; }
+.single-gallery-page .gallery-contents {
+  padding: 0 30px 30px 0px; }
+  .single-gallery-page .gallery-contents h1 {
+    text-align: justify !important; }
 
 @media (min-width: 768px) {
   .single-gallery-page .artist {
-    width: 18rem; } }
+    max-width: 18rem; } }
 
 .single-gallery-page .card .card-title {
   font-family: BebasNeue;
@@ -11569,7 +11571,7 @@ body {
   font-size: 56px; }
   @media (min-width: 768px) and (max-width: 991.98px) {
     .site h2 {
-      font-size: 48px; } }
+      font-size: 42px; } }
   @media (max-width: 767.98px) {
     .site h2 {
       font-size: 36px; } }
