--- a/sass/theme/_child_theme.scss
+++ b/sass/theme/_child_theme.scss
@@ -81,7 +81,7 @@ body {
 		font-family: BebasNeue;
 		font-size: 56px;
 		@include media-breakpoint-only(md) {
-			font-size: 48px;
+			font-size: 42px;
 		}
 		@include media-breakpoint-down(sm) {
 			font-size: 36px;
