--- a/sass/theme/_gallery_page.scss
+++ b/sass/theme/_gallery_page.scss
@@ -168,6 +168,7 @@ section#past-gallery {
 
 .single-gallery-page {
   .gallery-contents {
+    padding: 0 30px 30px 0px;
     h1 {
       text-align: justify !important;
     }
@@ -175,7 +176,7 @@ section#past-gallery {
 
   .artist {
     @include media-breakpoint-up(md) {
-      width: 18rem;
+      max-width: 18rem;
     }
   }
 
